# flight-assign

./: README.md  pyproject.toml
.github/workflows/: flight-assign.yml
src/flight_assign/: __init__.py  aerovect.py  assign.py  changes.py  format.py  gates.py  main.py  piers.py  roster.py  slack_io.py
tests/: test_aerovect.py  test_aerovect_client.py  test_assign.py  test_changes.py  test_format.py  test_gates.py  test_piers.py  test_roster.py  test_slack_io.py
