[project]
name = "flight-assign"
version = "0.1.0"
description = "Assigns Delta ATL T / A-South haulouts to on-shift operators and posts to Slack."
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "slack-sdk>=3.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "freezegun>=1.5",
]

[project.scripts]
flight-assign = "flight_assign.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
